--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,6 @@
     "no-prototype-builtins": "off",
     "@typescript-eslint/no-empty-function": "off",
     "no-duplicate-imports": "error",
-    "sort-imports": "error"
+    "sort-imports": ["error", { "ignoreDeclarationSort": true }]
   }
 }
